# OCIblocks

./: .gitignore  README.md  __init__.py  buildlocaldep.sh  pyproject.toml  requirements.txt
pulumi_oci_oke/: __init__.py  network.py  oke.py
src/: .gitignore  __main__.py
src/blocks/oke/: network copy.py  oke.py
src/blocks/vcn/: network.py
src/core/: base.py  naming.py  tagging.py
src/ociblocks/: __init__.py  network.py  oke.py
src/ociblocks/oke/: __init__.py  block.py  helper.py  network.py
test/: Pulumi.yaml  __main__.py  pyproject.toml
