[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pulumi_oci"
version = "0.0.1"
authors = [
  { name="Enrico Pesce", email="enricopesce@gmail.com" },
]
description = "A set of Pulumi ComponentResource for OCI"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/enricopesce/pulumi-oci"
Issues = "https://github.com/enricopesce/pulumi-oci/issues"