[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ociblocks"
version = "0.0.1"
authors = [
  { name="Enrico Pesce", email="enricopesce@gmail.com" },
]
description = "High-level resources used as building blocks to create complex OCI infrastructures"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pulumi >=3.122.0",
    "pulumi_oci >=2.0.0",
    "random-word >=1.0.11",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/enricopesce/ociblocks"
Issues = "https://github.com/enricopesce/ociblocks/issues"